--- a/www/apps/user-guide/app/promotions/campaigns/page.mdx
+++ b/www/apps/user-guide/app/promotions/campaigns/page.mdx
@@ -11,7 +11,7 @@ In this guide, you'll learn how to view and manage campaigns.
 
 ## What is a Campaign?
 
-A campaign is a collection of promotions related to a specific marketing or sales goals. A campaign also gives you granular control over promotion usages, allowing you to set up start and end date, and budget usages that once exceeded, the promotions of the campaign can't be used anymore.
+A campaign is a collection of promotions related to specific marketing or sales goals. A campaign also gives you granular control over promotion usages, allowing you to set up start and end dates, and budget usages that once exceeded, the promotions of the campaign can't be used anymore.
 
 ---
 
@@ -38,16 +38,16 @@ To create a campaign:
 1. Go to Promotions -> Campaigns from the sidebar.
 2. Click on the Create button at the top right.
 3. In the form that opens:
-    - Enter the campaign's nam and identifier in their respective fields.
+    - Enter the campaign's name and identifier in their respective fields.
     - Optionally add a description in the Description field.
     - Optionally set a start date in the "Start date" field. Promotions in this campaign can only be used after this date.
     - Optionally set an end date in the "End date" field. Promotions in this campaign are expired after this date.
     - You can set a campaign budget of the following types:
         - **Usage**: How many times the promotions in the campaign can be used. Once the number of times exceed the limit, the campaign and its promotions expire.
-        - **Spend**: The total amount that can be discounted by the promotions in the campaign. Once the total amount discounted exceeds the limit, the campaign and its promotions expire. This is not applicable on "Buy X Get Y" promotions.
+        - **Spend**: The total amount that can be discounted by the promotions in the campaign. Once the total amount discounted exceeds the limit, the campaign and its promotions expire. This is not applicable to "Buy X Get Y" promotions.
     - If you chose the **Spend** type, select the currency of the limit in the "Currency" field.
         - When adding promotions to the campaign later, promotions that discount a fixed amount can only be added if the currency matches the campaign budget's currency.
-    - In the Limit field, You can set a campaign budget limit based on the type you chose.
+    - In the Limit field, you can set a campaign budget limit based on the type you chose.
         - If you chose **Usage**, enter the number of times the promotions in the campaign can be used.
         - If you chose **Spend**, enter the total amount that can be discounted by the promotions in the campaign.
 4. Once you're done, click the Create button.
