--- a/www/apps/user-guide/app/promotions/create/page.mdx
+++ b/www/apps/user-guide/app/promotions/create/page.mdx
@@ -35,7 +35,7 @@ Once you've selected the type, click on the Continue button.
 
 ## Step 2: Details
 
-The fields in the details section will slightly defer based on the type you chose. So, the next sections cover the instructions for each type. Follow the section of the type you chose.
+The fields in the details section will slightly differ based on the type you chose. So, the next sections cover the instructions for each type. Follow the section of the type you chose.
 
 ### a. Amount off Products
 
@@ -47,7 +47,7 @@ If you chose the "Amount off Products" promotion type in the first section, fill
 2. For the Status, choose **Draft** if you don't want to allow customers to use the promotion yet, or **Active** otherwise.
 3. In the Code field, enter the promotion's code. It must be a code that doesn't have spaces. For example, `50OFF`.
 4. In the "Who can use this code?" section, you'll specify the conditions that must be met for the promotion to be applicable for a customer's cart.
-    - You must set the currency code that this promotion applies to, which is shown as  required field.
+    - You must set the currency code that this promotion applies to, which is shown as a required field.
     - To add a custom condition, click on the "Add condition" button. For each condition:
         - Select the attribute in the first field. This is the attribute that the condition applies to. It can be:
             - **Customer Group**: The customer must belong / not belong to the specified customer group(s).
@@ -98,8 +98,8 @@ If you chose the "Amount off Order" promotion type in the first section, fill ou
 2. For the Status, choose Draft if you don't want to allow customers to use the promotion yet, or Active otherwise.
 3. In the Code field, enter the promotion's code. It must be a code that doesn't have spaces. For example, `50OFF`.
 4. In the "Who can use this code?" section, you'll specify the conditions that must be met for the promotion to be applicable for a customer's cart.
-    - You must set the currency code that this promotion applies to, which is shown as  required field.
-    - To add custom condition, click on the "Add condition" button. For each condition:
+    - You must set the currency code that this promotion applies to, which is shown as a required field.
+    - To add a custom condition, click on the "Add condition" button. For each condition:
         - Select the attribute in the first field. This is the attribute that the condition applies to. It can be:
             - **Customer Group**: The customer must belong / not belong to the specified customer group(s).
             - **Region**: The customer's region must belong / not belong to the specified region(s).
@@ -232,7 +232,7 @@ If you chose the "Buy X Get Y" promotion type in the first section, fill out the
 5. In the "What needs to be in the cart to unlock the promotion?" section, you'll specify the "Buy X" part (for example, "Buy 3 shirts"):
     - You must set the minimum required quantity of the items in the cart. For example, for the "Buy 3 shirts get 1 for free", you set the minimum quantity to three.
     - You must set the product(s) that this promotion applies / doesn't apply to.
-    - To add custom condition, click on the "Add condition" button. For each custom condition:
+    - To add a custom condition, click on the "Add condition" button. For each custom condition:
         - Select the attribute in the first field. This is the attribute that the condition applies to. It can be:
             - **Product Category**: The promotion applies / doesn't apply to the products belonging to the specified categories.
             - **Product Collection**: The promotion applies / doesn't apply to the products belonging to the specified collection(s).
@@ -253,7 +253,7 @@ If you chose the "Buy X Get Y" promotion type in the first section, fill out the
 6. In the "What items will the promotion be applied to?" section, you'll specify the Buy Y part (for example, "get 1 free shirt"):
     - You must set the quantity of items that the customer gets out of the promotion. For example, for the "Buy 3 shirts get 1 for free", you set the quantity to one.
     - You must set the products tht the customer gets out of the promotion for free.
-    - To add custom condition, click on the "Add condition" button. For each custom condition:
+    - To add a custom condition, click on the "Add condition" button. For each custom condition:
         - Select the attribute in the first field. This is the attribute that the condition applies to. It can be:
             - **Product Category**: The promotion applies / doesn't apply to the products belonging to the specified categories.
             - **Product Collection**: The promotion applies / doesn't apply to the products belonging to the specified collection(s).
@@ -282,7 +282,7 @@ In the campaigns section, you can select whether to:
 
 - Continue **Without Campaign**. If selected, you can proceed and create the promotion.
 - Continue with an **Existing Campaign**. If selected, you'll need to select the campaign that the promotion will belong to.
-- Continue with a **New Campagin**. If selected, you'll see fields to create a new campaign.
+- Continue with a **New Campaign**. If selected, you'll see fields to create a new campaign.
 
 ### Create Campaign
 
