--- a/www/apps/user-guide/app/promotions/page.mdx
+++ b/www/apps/user-guide/app/promotions/page.mdx
@@ -8,11 +8,11 @@ export const metadata = {
 
 # {metadata.title}
 
-The Promotions domain allow you to create and manage discounts and campaigns in your store. You can create different types of promotions, such as discounted amount or percentage, or buy X get Y free.
+The Promotions domain allows you to create and manage discounts and campaigns in your store. You can create different types of promotions, such as discounted amount or percentage, or buy X get Y for free.
 
-Promotions belong to campaigns, and you can manage for campagins budgets, start and end dates, and more, giving you flexibility in managing your promotions.
+Promotions belong to campaigns, and you can manage campaign budgets, start and end dates, and more, giving you granular control over your promotions.
 
-You can view the list of prmotions in your commerce store by clicking on Promotions from the sidebar menu.
+You can view the list of promotions in your commerce store by clicking on Promotions from the sidebar menu.
 
 In the list, you can see promotion details such as the code and status. You can also search, filter, and sort the promotions to find the specific item you are looking for.
 
@@ -30,4 +30,4 @@ Find tips to use lists effectively in [this guide](../tips/lists/page.mdx).
 
 - [Create a Promotion](./create/page.mdx)
 - [Manage Promotions](./manage/page.mdx)
-- [Manage Campagins](./campaigns/page.mdx)
+- [Manage Campaigns](./campaigns/page.mdx)
