--- a/www/apps/user-guide/app/promotions/manage/page.mdx
+++ b/www/apps/user-guide/app/promotions/manage/page.mdx
@@ -70,7 +70,7 @@ To edit a promotion's general details:
 3. Choose Edit from the dropdown.
 4. In the side window that opens:
     - You can change the promotion's status to either **Draft**, **Active**, or **Inactive**. Inactive is useful if the promotion was originally active but you want to expire it.
-    - You can edit the promotion's method (wheter it's applied manually or automatically) and code.
+    - You can edit the promotion's method (whether it's applied manually or automatically) and code.
     - You can change how the amount is discounted, either by a fixed amount or a percentage. You can also change the discounted amount.
     - You can change how the promotion is applied, either on every applicable item or across all items in the cart.
         - For example, if your promotion discounts an amount from applicable products in a cart, choosing **Each** applies the discount on each applicable product, whereas **Across** applies the discount across all applicable products.
@@ -159,7 +159,7 @@ To edit the "Buy X" part of the promotion:
 1. Go to the promotion's details page.
 2. Click the <InlineIcon Icon={EllipsisHorizontal} alt="three-dots" /> icon at the top right of the "What needs to be in the cart to unlock the promotion?" section.
 3. Choose Edit from the dropdown.
-4. In the side window, you can edit te minimum required quantity of the product in the "Buy X" condition, and any other existing conditions. You can also add new conditions by clicking the "Add condition" button. For each condition:
+4. In the side window, you can edit the minimum required quantity of the product in the "Buy X" condition, and any other existing conditions. You can also add new conditions by clicking the "Add condition" button. For each condition:
     - Select the attribute in the first field. This is the attribute that the condition applies to. It can be:
         - **Product**: The promotion applies / doesn't apply to the specified product(s).
         - **Product Category**: The promotion applies / doesn't apply to the products belonging to the specified categories.
