fix build error

--- a/www/apps/user-guide/app/customers/page.mdx
+++ b/www/apps/user-guide/app/customers/page.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 The Customers domain allows you to manage customers and customer groups in your commerce store.
 
-You can manage both customers that have registered in your store and guest customers that have placed an order. You can also segment these customers into groups to offer them specific [promotions](../discounts/page.mdx) and [pricing](../pricing/page.mdx).
+You can manage both customers that have registered in your store and guest customers that have placed an order. You can also segment these customers into groups to offer them specific [promotions](../promotions/page.mdx) and [pricing](../pricing/page.mdx).
 
 You can view the list of customers in your commerce store by clicking on Customers from the sidebar menu.
 
