--- a/www/apps/user-guide/app/products/categories/page.mdx
+++ b/www/apps/user-guide/app/products/categories/page.mdx
@@ -60,6 +60,17 @@ To view a category's details:
 
 ![Category details page](https://res.cloudinary.com/dza7lstvk/image/upload/v1739874959/User%20Guide/Screenshot_2025-02-18_at_12.35.43_PM_wfijxl.png)
 
+### Product Category Status and Visibility
+
+At the top right of the first section, you'll find two badges:
+
+- The first from the left is the category's status:
+  - **Active**: The category is active and shown on the storefront.
+  - **Inactive**: The category is inactive and not shown on the storefront.
+- The second from the left is the category's visibility:
+  - **Public**: The category is visible to customers on the storefront.
+  - **Private**: The category is not visible to customers on the storefront. It's only used by admin users.
+
 ---
 
 ## Edit Product Category's Details
