--- a/www/apps/user-guide/app/products/create/page.mdx
+++ b/www/apps/user-guide/app/products/create/page.mdx
@@ -115,3 +115,5 @@ To manage the inventory kit of variants in the fourth step, for each variant:
 Once you're done, click the "Publish" button.
 
 ![Create Product Fourth Step](https://res.cloudinary.com/dza7lstvk/image/upload/v1739808931/User%20Guide/Screenshot_2025-02-17_at_6.15.16_PM_hofawf.png)
+
+You can now [manage the product](../edit/page.mdx) you created.
