--- a/www/apps/user-guide/app/products/edit/page.mdx
+++ b/www/apps/user-guide/app/products/edit/page.mdx
@@ -32,7 +32,7 @@ The first section, which has the product's title as a header, includes the produ
 
 ### Product Statuses
 
-A product can have one of the following statuses:
+At the top right of the first section, you can see the product's status. A product can have one of the following statuses:
 
 <Table>
   <Table.Header>
