--- a/www/apps/user-guide/app/promotions/create/page.mdx
+++ b/www/apps/user-guide/app/promotions/create/page.mdx
@@ -301,3 +301,5 @@ If you selected a new campaign, you need to fill out the following to create a c
 5. Once you're done, click on the Save button.
 
 ![Create campaign form](https://res.cloudinary.com/dza7lstvk/image/upload/v1739897668/User%20Guide/Screenshot_2025-02-18_at_6.53.46_PM_gfhp9l.png)
+
+You can now [manage the promotion](../manage/page.mdx) you created.
