docs: update store user guide

--- a/www/apps/user-guide/app/settings/page.mdx
+++ b/www/apps/user-guide/app/settings/page.mdx
@@ -2,7 +2,7 @@
 sidebar_autogenerate_exclude: true
 ---
 
-import { CogSixTooth } from "@medusajs/icons"
+import { ArrowUturnLeft } from "@medusajs/icons"
 
 export const metadata = {
   title: `Settings`,
@@ -10,6 +10,28 @@ export const metadata = {
 
 # {metadata.title}
 
-You can access your store's settings by clicking the <InlineIcon Icon={CogSixTooth} alt="settings" /> icon at the top right of the page.
+Your Medusa store's settings are where you can manage your store's details, regions, sales channels, and more.
 
-This shows a settings panel with a different sidebar to manage your profile, store details, regions, and more.
+You can access your store's settings by clicking "Settings" item at the bottom of the sidebar. This shows a settings panel with a different sidebar to manage your store's data. 
+
+You can also go back to the main sidebar by clicking the <InlineIcon Icon={ArrowUturnLeft} alt="back" /> icon at the top of the sidebar.
+
+![Settings Page](https://res.cloudinary.com/dza7lstvk/image/upload/v1739962494/User%20Guide/Screenshot_2025-02-19_at_12.54.00_PM_eozum8.png)
+
+---
+
+## Manage Settings
+
+- [Manage Store](./store/page.mdx)
+- [Manage Users](./users/page.mdx)
+- [Manage Regions](./regions/page.mdx)
+- [Manage Tax Regions](#)
+- [Manage Return Reasons](./return-reasons/page.mdx)
+- [Manage Sales Channels](./sales-channels/page.mdx)
+- [Manage Product Types](#)
+- [Manage Product Tags](#)
+- [Manage Location & Shipping Settings](./locations/page.mdx)
+- [Manage Publishable API Keys](#)
+- [Manage Secret API Keys](#)
+- [Manage Workflow Executions](./developer/executions/page.mdx)
+- [Manage Profile](./profile/page.mdx)
