docs: update users user guide

--- a/www/apps/user-guide/app/settings/page.mdx
+++ b/www/apps/user-guide/app/settings/page.mdx
@@ -12,7 +12,7 @@ export const metadata = {
 
 Your Medusa store's settings are where you can manage your store's details, regions, sales channels, and more.
 
-You can access your store's settings by clicking "Settings" item at the bottom of the sidebar. This shows a settings panel with a different sidebar to manage your store's data. 
+You can access your store's settings by clicking the "Settings" item at the bottom of the sidebar. This shows a settings panel with a different sidebar to manage your store's data. 
 
 You can also go back to the main sidebar by clicking the <InlineIcon Icon={ArrowUturnLeft} alt="back" /> icon at the top of the sidebar.
 
