--- a/www/apps/user-guide/app/settings/page.mdx
+++ b/www/apps/user-guide/app/settings/page.mdx
@@ -30,7 +30,7 @@ You can also go back to the main sidebar by clicking the <InlineIcon Icon={Arrow
 - [Manage Sales Channels](./sales-channels/page.mdx)
 - [Manage Product Types](./product-types/page.mdx)
 - [Manage Product Tags](./product-tags/page.mdx)
-- [Manage Location & Shipping Settings](./locations/page.mdx)
+- [Manage Location & Shipping Settings](./locations-and-shipping/page.mdx)
 - [Manage Publishable API Keys](#)
 - [Manage Secret API Keys](#)
 - [Manage Workflow Executions](./developer/executions/page.mdx)
