feat(inventory): Add quantity across locations translation and formatting

--- a/packages/admin/dashboard/src/i18n/translations/$schema.json
+++ b/packages/admin/dashboard/src/i18n/translations/$schema.json
@@ -3032,6 +3032,9 @@
         "editItemDetails": {
           "type": "string"
         },
+        "quantityAcrossLocations": {
+          "type": "string"
+        },
         "create": {
           "type": "object",
           "properties": {
@@ -3246,6 +3249,7 @@
         "manageLocations",
         "deleteWarning",
         "editItemDetails",
+        "quantityAcrossLocations",
         "create",
         "reservation",
         "adjustInventory",
