--- a/www/apps/resources/app/recipes/erp/odoo/page.mdx
+++ b/www/apps/resources/app/recipes/erp/odoo/page.mdx
@@ -138,9 +138,9 @@ export default class OdooModuleService {
           // Use client.receive when you received a JSON-RPC response.
           return response
             .json()
-            .then((jsonRPCResponse) => this.client.receive(jsonRPCResponse));
+            .then((jsonRPCResponse) => this.client.receive(jsonRPCResponse))
         } else if (jsonRPCRequest.id !== undefined) {
-          return Promise.reject(new Error(response.statusText));
+          return Promise.reject(new Error(response.statusText))
         }
       })
     })
@@ -183,7 +183,7 @@ export default class OdooModuleService {
         this.options.dbName, 
         this.options.username, 
         this.options.apiKey, 
-        {}
+        {},
       ],
     })
   }
@@ -288,7 +288,7 @@ export default class OdooModuleService {
         ]], {
           offset,
           limit,
-        }
+        },
       ],
     })
     
@@ -324,9 +324,9 @@ const productSpecifications = {
   image_256: {},
   currency_id: {
     fields: {
-      display_name: {}
-    }
-  }
+      display_name: {},
+    },
+  },
 }
 
 // retrieve products
@@ -351,39 +351,39 @@ const products: OdooProduct[] = await this.client.request("call", {
                 name: {},
                 attribute_id: {
                   fields: {
-                    display_name: {}
-                  }
+                    display_name: {},
+                  },
                 },
               },
               context: {
-                show_attribute: false
-              }
+                show_attribute: false,
+              },
             },
-            code: {}
+            code: {},
           },
           context: {
-            show_code: false
-          }
+            show_code: false,
+          },
         },
         attribute_line_ids: {
           fields: {
             attribute_id: {
               fields: {
-                display_name: {}
-              }
+                display_name: {},
+              },
             },
             value_ids: {
               fields: {
-                display_name: {}
+                display_name: {},
               },
               context: {
-                show_attribute: false
-              }
-            }
-          }
-        }
-      }
-    }
+                show_attribute: false,
+              },
+            },
+          },
+        },
+      },
+    },
   ],
 })
 
@@ -437,8 +437,8 @@ module.exports = defineConfig({
         dbName: process.env.ODOO_DB_NAME,
         username: process.env.ODOO_USERNAME,
         apiKey: process.env.ODOO_API_KEY,
-      }
-    }
+      },
+    },
   ],
 })
 ```
@@ -586,13 +586,13 @@ In the same `src/workflows/sync-from-erp.ts` file, add the following imports:
 
 ```ts title="src/workflows/sync-from-erp.ts"
 import { 
-  createWorkflow, transform, WorkflowResponse
+  createWorkflow, transform, WorkflowResponse,
 } from "@medusajs/framework/workflows-sdk"
 import { 
-  createProductsWorkflow, updateProductsWorkflow, useQueryGraphStep
+  createProductsWorkflow, updateProductsWorkflow, useQueryGraphStep,
 } from "@medusajs/medusa/core-flows"
 import { 
-  CreateProductWorkflowInputDTO, UpdateProductWorkflowInputDTO
+  CreateProductWorkflowInputDTO, UpdateProductWorkflowInputDTO,
 } from "@medusajs/framework/types"
 ```
 
@@ -609,7 +609,7 @@ export const syncFromErpWorkflow = createWorkflow(
       entity: "store",
       fields: [
         "default_sales_channel_id",
-      ]
+      ],
     })
 
     // @ts-ignore
@@ -617,8 +617,8 @@ export const syncFromErpWorkflow = createWorkflow(
       entity: "shipping_profile",
       fields: ["id"],
       pagination: {
-        take: 1
-      }
+        take: 1,
+      },
     }).config({ name: "shipping-profile" })
 
     const externalIdsFilters = transform({
@@ -633,8 +633,8 @@ export const syncFromErpWorkflow = createWorkflow(
       fields: ["id", "external_id", "variants.*"],
       filters: {
         // @ts-ignore
-        external_id: externalIdsFilters
-      }
+        external_id: externalIdsFilters,
+      },
     }).config({ name: "existing-products" })
 
     // TODO prepare products to create and update
@@ -657,12 +657,12 @@ Next, you need to prepare the products that should be created or updated. To do 
 ```ts title="src/workflows/sync-from-erp.ts"
 const {
   productsToCreate,
-  productsToUpdate
+  productsToUpdate,
 } = transform({
   existingProducts,
   odooProducts,
   shippingProfiles,
-  stores
+  stores,
 }, (data) => {
   const productsToCreate: CreateProductWorkflowInputDTO[] = []
   const productsToUpdate: UpdateProductWorkflowInputDTO[] = []
@@ -676,13 +676,13 @@ const {
       options: odooProduct.attribute_line_ids.length ? odooProduct.attribute_line_ids.map((attribute) => {
         return {
           title: attribute.attribute_id.display_name,
-          values: attribute.value_ids.map((value) => value.display_name)
+          values: attribute.value_ids.map((value) => value.display_name),
         }
       }) : [
         {
           title: "Default",
-          values: ["Default"]
-        }
+          values: ["Default"],
+        },
       ],
       hs_code: odooProduct.hs_code || "",
       handle: odooProduct.website_url.replace("/shop/", ""),
@@ -691,7 +691,7 @@ const {
       sales_channels: [
         {
           id: data.stores[0].default_sales_channel_id || "",
-        }
+        },
       ],
     }
 
@@ -720,13 +720,13 @@ const {
           prices: [
             {
               amount: variant.list_price,
-              currency_code: variant.currency_id.display_name.toLowerCase()
-            }
+              currency_code: variant.currency_id.display_name.toLowerCase(),
+            },
           ],
           manage_inventory: false, // change to true if syncing inventory from Odoo
           metadata: {
-            external_id: `${variant.id}`
-          }
+            external_id: `${variant.id}`,
+          },
         }
       })
     } else {
@@ -734,17 +734,17 @@ const {
         id: existingProduct ? existingProduct.variants[0].id : undefined,
         title: "Default",
         options: {
-          Default: "Default"
+          Default: "Default",
         },
         // @ts-ignore
         prices: [
           {
             amount: odooProduct.list_price,
-            currency_code: odooProduct.currency_id.display_name.toLowerCase()
-          }
+            currency_code: odooProduct.currency_id.display_name.toLowerCase(),
+          },
         ],
         metadata: {
-          external_id: `${odooProduct.id}`
+          external_id: `${odooProduct.id}`,
         },
         manage_inventory: false, // change to true if syncing inventory from Odoo
       })
@@ -759,7 +759,7 @@ const {
 
   return {
     productsToCreate,
-    productsToUpdate
+    productsToUpdate,
   }
 })
 
@@ -785,18 +785,18 @@ You can now create and update the products in the workflow. Replace the `TODO` w
 ```ts title="src/workflows/sync-from-erp.ts"
 createProductsWorkflow.runAsStep({
   input: {
-    products: productsToCreate
-  }
+    products: productsToCreate,
+  },
 })
 
 updateProductsWorkflow.runAsStep({
   input: {
-    products: productsToUpdate
-  }
+    products: productsToUpdate,
+  },
 })
 
 return new WorkflowResponse({
-  odooProducts
+  odooProducts,
 })
 ```
 
@@ -816,10 +816,10 @@ To create a scheduled job, create the file `src/jobs/sync-products-from-erp.ts` 
 
 ```ts title="src/jobs/sync-products-from-erp.ts"
 import {
-  MedusaContainer
-} from "@medusajs/framework/types";
-import { syncFromErpWorkflow } from "../workflows/sync-from-erp";
-import { OdooProduct } from "../modules/odoo/service";
+  MedusaContainer,
+} from "@medusajs/framework/types"
+import { syncFromErpWorkflow } from "../workflows/sync-from-erp"
+import { OdooProduct } from "../modules/odoo/service"
 
 export default async function syncProductsJob(container: MedusaContainer) {
   const limit = 10
@@ -833,8 +833,8 @@ export default async function syncProductsJob(container: MedusaContainer) {
     odooProducts = (await syncFromErpWorkflow(container).run({
       input: {
         limit,
-        offset
-      }
+        offset,
+      },
     })).result.odooProducts
 
     offset += limit
@@ -847,7 +847,7 @@ export default async function syncProductsJob(container: MedusaContainer) {
 export const config = {
   name: "daily-product-sync",
   schedule: "0 0 * * *", // Every day at midnight
-};
+}
 ```
 
 In this file, you export:
@@ -869,7 +869,7 @@ To test out syncing the products from Odoo to Medusa, first, change the schedule
 export const config = {
   name: "daily-product-sync",
   schedule: "* * * * *", // Every minute
-};
+}
 ```
 
 Then, start the Medusa application with the following command:
