iteration to intro

--- a/www/apps/resources/app/recipes/erp/page.mdx
+++ b/www/apps/resources/app/recipes/erp/page.mdx
@@ -10,7 +10,7 @@ In this recipe, you'll learn about the general approach to integrating an ERP sy
 
 Businesses often rely on an ERP system to centralize their data and custom business rules and operations. This includes using the ERP to store special product prices, manage custom business rules that change how their customers make purchases, and handle the fulfillment and processing of orders.
 
-When integrating the ERP system with other ecommerce platforms, you'll face complications as you try to customize the platform's existing flows and inject data from the ERP system. For example, the ecommerce platform may not support purchasing products with custom pricing or restricting certain products from purchase under certain conditions.
+When integrating the ERP system with other ecommerce platforms, you'll face complications maintaining data consistency across systems and customizing the platform's existing flows to accommodate the ERP system's data and operations. For example, the ecommerce platform may not support purchasing products with custom pricing or restricting certain products from purchase under certain conditions.
 
 Medusa's framework for customization solves these challenges by giving you a durable execution engine to orchestrate operations through custom flows, and the flexibility to customize the platform's existing flows. You can wrap existing flows with custom logic, inject custom features into existing flows, and create new flows that interact with the ERP system and sync data between the two systems.
 
